--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
+                <CheckBox
+                    android:id="@+id/cb_group_chat"
+                    android:checked="true"
+                    android:text="群聊天(默认个人聊天, 勾上则为群聊天)"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
                 <Button
                     android:id="@+id/btn_open_accessibility"
                     android:text="打开无障碍权限"
