--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <ImageView
+    <com.ziwenwen.onekeychat.view.SquareImageView
         android:id="@+id/image"
         android:scaleType="center"
         android:layout_width="match_parent"
@@ -13,6 +13,7 @@
         android:id="@+id/tvName"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:textSize="14sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
