--- a/app/src/main/res/layout/widget_one_or_two.xml
+++ b/app/src/main/res/layout/widget_one_or_two.xml
@@ -1,57 +1,25 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:background="#09C"
-                android:padding="@dimen/widget_margin">
+<RelativeLayout
+    android:id="@+id/view_one"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#09C"
+    android:padding="@dimen/widget_margin">
 
-    <RelativeLayout
-        android:id="@+id/view_one"
-        android:layout_weight="1"
+    <ImageView
+        android:id="@+id/image_one"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="0dp">
+        android:scaleType="fitXY"/>
 
-        <ImageView
-            android:id="@+id/image_one"
-            android:scaleType="fitXY"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <TextView
-            android:id="@+id/tvName_one"
-            android:layout_centerHorizontal="true"
-            android:textSize="14sp"
-            android:layout_alignBottom="@+id/image_one"
-            android:singleLine="true"
-            android:layout_marginBottom="24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </RelativeLayout>
-    <RelativeLayout
-        android:visibility="gone"
-        android:id="@+id/view_two"
-        android:layout_weight="1"
+    <TextView
+        android:id="@+id/tvName_one"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="0dp">
+        android:layout_alignBottom="@+id/image_one"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:singleLine="true"
+        android:textSize="14sp"/>
 
-        <ImageView
-            android:id="@+id/image_two"
-            android:scaleType="fitXY"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <TextView
-            android:id="@+id/tvName_two"
-            android:layout_centerHorizontal="true"
-            android:layout_alignBottom="@+id/image_two"
-            android:singleLine="true"
-            android:layout_marginBottom="24dp"
-            android:textSize="14sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </RelativeLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
