--- a/app/src/main/res/layout/one_app_widget.xml
+++ b/app/src/main/res/layout/one_app_widget.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#09C"
+                android:background="@color/widget_bg"
                 android:padding="@dimen/widget_margin">
 
     <GridView
