--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -10,6 +10,10 @@
         android:numColumns="3"
         android:horizontalSpacing="2dp"
         android:verticalSpacing="2dp"
+        android:paddingTop="2dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
