--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -15,6 +15,11 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:textSize="14sp"
+        android:shadowColor="@color/black"
+        android:textColor="@color/white"
+        android:shadowDx="1.0"
+        android:shadowDy="1.0"
+        android:shadowRadius="2.0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
