替换Application Widget预览图片

--- a/app/src/main/res/xml/one_app_widget_info.xml
+++ b/app/src/main/res/xml/one_app_widget_info.xml
@@ -4,7 +4,7 @@
                     android:initialLayout="@layout/one_app_widget"
                     android:minHeight="40dp"
                     android:minWidth="40dp"
-                    android:previewImage="@drawable/example_appwidget_preview"
+                    android:previewImage="@drawable/example"
                     android:resizeMode="horizontal|vertical"
                     android:updatePeriodMillis="30000"
                     android:widgetCategory="home_screen">
