--- a/app/src/main/res/xml/one_app_widget_info.xml
+++ b/app/src/main/res/xml/one_app_widget_info.xml
@@ -6,7 +6,7 @@
                     android:minWidth="40dp"
                     android:previewImage="@drawable/example"
                     android:resizeMode="horizontal|vertical"
-                    android:updatePeriodMillis="30000"
+                    android:updatePeriodMillis="86400000"
                     android:widgetCategory="home_screen">
 </appwidget-provider>
     <!--android:updatePeriodMillis="86400000"-->
