--- a/app/src/main/res/layout/activitty_intro.xml
+++ b/app/src/main/res/layout/activitty_intro.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ziwenwen.onekeychat.view.CustomWebView
-    android:id="@+id/custom_web_view"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</com.ziwenwen.onekeychat.view.CustomWebView>
+    <com.ziwenwen.onekeychat.view.CustomWebView
+        android:id="@+id/custom_web_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+</FrameLayout>
