--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -110,7 +110,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
                         android:gravity="center"
-                        android:text="多人聊天"
+                        android:text="群        聊"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
